--- a/about-me-portfolio/index-bootstrap.html
+++ b/about-me-portfolio/index-bootstrap.html
@@ -12,6 +12,26 @@
 
 <header> Marissa Crawford</header>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li>
+                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
 <title>Marissa Crawford</title>
 
 <body>
@@ -20,7 +40,9 @@
                 <img src="assets/images/about-me-photo.jpeg" height=319.52px width=240px alt="portfolio">    
                 <div class="media-body">
                   <h1 class="mt-0">About Me</h1>
-                  <p>Like any true Oregon native</p>
+                  <p>Like any true Oregon native Marissa has a resourceful and caring spirit that she likes to bring to her work.
+                      Having been a caregiver for roughly 10 years she has aquired a tremendous amount of patience and poise when facing difficult tasks. Despite coding being a far cry from the hospitality work she is used to, Marissa is always keen to face and overcome a new challenge.
+                  </p>
                 </div>
               </div>
 
